finished my website

--- a/index.html
+++ b/index.html
@@ -10,17 +10,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To </h1>
     <h1><span class="text-highlight">SOHAN'S</span> Website</h1>
     <h3>World Class Professional Webdeveloper</h3>
     <p>I want to learn programming basic to advence.sop everyday i spent my valuabe time in learnig.Everybody pray for me.All the best.</p>
-    
+    <a class="button" target="_blank" href="https://www.linkedin.com/in/sohanahmed/">Hire Me</a>
         </div>
         <div class="half-width">
             <img src=images\sohan.png alt="">
         </div>
     </section>
+
+    <section class="mid-banner">
+
+        <div class="half-width">
+    <img src="images/2ndpic.png" alt="">
+        </div>
+        
+       <div class="half-width">
+     <h1>Dream Big</h1>
+     <h3>Become a web developer</h3>
+     <p>I Already learned HTML & CSS.Now i also lern PHP.I always try to lern better something.If want to know me Please Download My <span class="text-highlight">Resume</span></p>
+     <a target="_blank" class="button2" href="#">Download Resume</a>
+       </div>
+    </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+       <div id="full-strack" class="half-width single-experience">
+       <h2>Full Strack WebDeveloper</h2>
+       <h4><span class="text-highlight">2020-Present|Pro Level Web Developer</span></h4>
+       <p>Amar sonar bangla ami tomay valobasi 1111111Already learned HTML & CSS.Now i also lern PHP.I always try to lern better something.If want to know me Please Download MyAlready learned HTML & CSS.Now i also lern PHP.I always try to lern better something.If want to know me Please Download My</p>
+       </div>
+
+       <div id="baby-web" class="half-width single-experience">
+        <h2>Baby WebDeveloper</h2>
+        <h4><span class="text-highlight">2020-2021|Programming Hero Learner</span></h4>
+        <p>Amar sonar bangla ami tomay valobasiAlready learned HTML & CSS.Now i also lern PHP.I always try to lern better something.If want to know me Please Download MyAlready learned HTML & CSS.Now i also lern PHP.I always try to lern better something.If want to know me Please Download My</p>
+        </div>
+    </section>
+
+    <footer>© 2022 jonakimart.com. All Rights Reserved.</footer>
+
 </body>
 </html>
